--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
@@ -521,10 +521,6 @@ static const struct kvm_io_device_ops pit_dev_ops = {
 
 在前面创建pit中初始化了pit设备的读写函数.
 
-PIT的操作属于Port IO, 整体流程是`handle_io() -> kvm_fast_pio_out() -> emulator_pio_out_emulated() -> emulator_pio_in_out() -> kernel_pio() -> kvm_io_bus_write() -> __kvm_io_bus_write() -> kvm_iodevice_write() -> dev->ops->write()`, 详细见PIO部分内容
-
-那么我们在`pit_ioport_write`里面就需要分析这些IO，看用户是否需要创建定时器，如果需要就调用`create_pit_timer`函数创建一个PIT。
-
 ### 5.5.1. 整体流程
 
 ```cpp
@@ -534,16 +530,22 @@ handle_io()  // io vmexit入口
  |   |   ├─ struct kvm_pit *pit = dev_to_pit();  // 获取pit
  |   |   ├─ pit_load_count(); // 分配irq source id
  |   |   ├─ ps->channels[channel].count_load_time = ktime_get(); return; // 不是 通道0, 则获取时间然后直接返回
- |   |   ├─ create_pit_timer(); // 创建pit timer定时器
- |   |   |   ├─ s64 interval = mul_u64_u32_div(val, NSEC_PER_SEC, KVM_PIT_FREQ); // 计算间隔时间, 即定时器超时时间
- |   |   |   ├─ hrtimer_cancel(&ps->timer); // 取消pit定时器
- |   |   |   ├─ kthread_flush_work(&pit->expired); // 清理pit超时的work
- |   |   |   ├─ ps->period = interval; // 设置pit的超时时间
- |   |   |   ├─ ps->is_periodic = is_period; // 是否周期触发
- |   |   |   └─ hrtimer_start(&ps->timer, ktime_add_ns(ktime_get(), interval), HRTIMER_MODE_ABS); // 启用pit的hrtimer定时器
+ |   |   └─ create_pit_timer(); // 创建pit timer定时器
+ |   |       ├─ s64 interval = mul_u64_u32_div(val, NSEC_PER_SEC, KVM_PIT_FREQ); // 计算间隔时间, 即定时器超时时间
+ |   |       ├─ hrtimer_cancel(&ps->timer); // 取消pit定时器
+ |   |       ├─ kthread_flush_work(&pit->expired); // 清理pit超时的work
+ |   |       ├─ ps->period = interval; // 设置pit的超时时间
+ |   |       ├─ ps->is_periodic = is_period; // 是否周期触发
+ |   |       └─ hrtimer_start(&ps->timer, ktime_add_ns(ktime_get(), interval), HRTIMER_MODE_ABS); // 启用pit的hrtimer定时器
 ```
 
+这个是启用了定时器, 后面还有**定时器中断处理流程**以及**时钟中断注入流程**.
+
 ### 5.5.2. 入口代码
+
+PIT的操作属于Port IO, 整体流程是`handle_io() -> kvm_fast_pio_out() -> emulator_pio_out_emulated() -> emulator_pio_in_out() -> kernel_pio() -> kvm_io_bus_write() -> __kvm_io_bus_write() -> kvm_iodevice_write() -> dev->ops->write()`, 详细见PIO部分内容
+
+那么我们在`pit_ioport_write`里面就需要分析这些IO，看用户是否需要创建定时器，如果需要就调用`create_pit_timer`函数创建一个PIT。
 
 ```cpp
 static int pit_ioport_write(struct kvm_vcpu *vcpu,
@@ -740,10 +742,11 @@ static void pit_do_work(struct kthread_work *work)
         struct kvm_vcpu *vcpu;
         int i;
         struct kvm_kpit_state *ps = &pit->pit_state;
-
+        // 判断上一个中断是否被ack, 如果没有被ack, 则直接返回, 不注入
         if (atomic_read(&ps->reinject) && !atomic_xchg(&ps->irq_ack, 0))
                 return;
-
+        // 中断注入
+        // 模拟一个高电平和一个低电平, 发送给PIC, 触发时钟中断
         kvm_set_irq(kvm, pit->irq_source_id, 0, 1, false);
         kvm_set_irq(kvm, pit->irq_source_id, 0, 0, false);
 
