--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
@@ -846,7 +846,7 @@ static void start_apic_timer(struct kvm_lapic *apic)
 static void __start_apic_timer(struct kvm_lapic *apic, u32 count_reg)
 {
         atomic_set(&apic->lapic_timer.pending, 0);
-        // APIC timer是周期性模式或者一次性模式
+        // APIC timer是周期性模式或者一次性模式 并且
         if ((apic_lvtt_period(apic) || apic_lvtt_oneshot(apic))
             && !set_target_expiration(apic, count_reg))
                 return;
